[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "MINERVA-toolbox"
version = "2026.02.23"
dependencies = [
    "matplotlib",
    "numpy",
    "ipywidgets",
    "fabio",
    "nexusformat",
    "h5py",
    "pathlib",
    "plotly",
    "pyFAI",
    "pandas",
    "pillow",
    "lmfit"
]

requires-python = ">=3.10"
description = "Utility for viewing and analysing GIWAXS data from MINERVA"
readme = "README.rst"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
classifiers = [
  "Development Status :: pre-Alpha",
  "Programming Language :: Python"
]






